--- a/article/app/views/liveblog/keyEvents.scala.html
+++ b/article/app/views/liveblog/keyEvents.scala.html
@@ -1,10 +1,17 @@
 @import model.liveblog.KeyEventData
-@(id: String, keyEvents: Seq[KeyEventData])
+@import _root_.liveblog.LiveBlogPageModel
+@import model.liveblog.BodyBlock
+
+@(id: String, keyEvents: Seq[KeyEventData], pageModel: Option[LiveBlogPageModel[BodyBlock]] = None)
 
 @keyEvents.map { keyEvent =>
     <li class="timeline__item">
-        <a class="timeline__link" href="@id?page=with:block-@keyEvent.id#block-@keyEvent.id" data-event-id="block-@keyEvent.id">
-            <span class="timeline__date">@views.html.liveblog.dateBlock(keyEvent.time)</span><span class="timeline__title u-underline">@keyEvent.title</span>
+        <a class="timeline__link"
+            href="@if(!pageModel.map(_.hasBlock(_.id)(keyEvent.id)).getOrElse(true)){@{id}?page=with:block-@keyEvent.id}#block-@keyEvent.id"
+            data-event-id="block-@keyEvent.id">
+            <span class="timeline__date">@views.html.liveblog.dateBlock(keyEvent.time)</span><span class="timeline__title u-underline">
+                @keyEvent.title
+            </span>
         </a>
     </li>
 }
