--- a/common/app/views/emailFragment.scala.html
+++ b/common/app/views/emailFragment.scala.html
@@ -1,5 +1,5 @@
-@(page: model.Page, emailType: String, listId: Int)(implicit request: RequestHeader)
+@(page: model.Page, email: Email)(implicit request: RequestHeader)
 
 @emailEmbed(page){
-    @fragments.email.signup.emailSignUp(emailType, listId, "Sign up to our daily email")
+    @fragments.email.signup.emailSignUp(email)
 }
