--- a/common/app/views/fragments/email/signup/emailSignUp.scala.html
+++ b/common/app/views/fragments/email/signup/emailSignUp.scala.html
@@ -1,34 +1,27 @@
-@(  componentClass: String,
-    listId: Int,
-    formHeading: String = "",
-    formDescription: String = "",
-    labelText: String = "Your email address",
-    submitText: String = "Sign up",
-    smallText: String = "No spam ever. Unsubscribe in one click.",
-    formImage: String = "")(implicit request: RequestHeader)
+@(email: Email)(implicit request: RequestHeader)
 
 @import common.LinkTo
 
-@formId = @{ componentClass + "-email-sub-form" }
-@inputId = @{ componentClass + "-email-sub-input" }
+@formId = @{ email.componentClass + "-email-sub-form" }
+@inputId = @{ email.componentClass + "-email-sub-input" }
 
-@wrapperClass = @{"email-sub js-email-sub" + " email-sub--" + componentClass + " js-email-sub--" + componentClass}
-@formClass = @{ "email-sub__form js-email-sub__form" + " email-sub__form--" + componentClass }
+@wrapperClass = @{"email-sub js-email-sub" + " email-sub--" + email.componentClass + " js-email-sub--" + email.componentClass}
+@formClass = @{ "email-sub__form js-email-sub__form" + " email-sub__form--" + email.componentClass }
 
 <div class="@wrapperClass">
-    @if(formHeading) {
-        @fragments.email.signup.emailSignUpHeader(componentClass, formHeading, formDescription, formImage)
+    @if(email.formHeading) {
+        @fragments.email.signup.emailSignUpHeader(email.componentClass, email.formHeading, email.formDescription)
     }
 
-    <form action="@LinkTo("/email")" method="post" id="@formId" class="@formClass" data-email-form-type="@componentClass" data-email-list-id="@listId">
+    <form action="@LinkTo("/email")" method="post" id="@formId" class="@formClass" data-email-form-type="@email.componentClass" data-email-list-id="@email.listId">
         <div class="email-sub__form-wrapper">
             <div class="email-sub__inline-label js-email-sub__inline-label">
-                <label class="email-sub__label js-email-sub__label" for="@inputId">@fragments.inlineSvg("envelope", "icon", Seq("email-sub__label__icon"))@labelText</label>
+                <label class="email-sub__label js-email-sub__label" for="@inputId">@fragments.inlineSvg("envelope", "icon", Seq("email-sub__label__icon"))@email.labelText</label>
                 <input class="email-sub__text-input js-email-sub__text-input" type="email" name="email" id="@inputId" required />
-                <input class="js-email-sub__listid-input" type="hidden" name="listId" value="@listId" />
+                <input class="js-email-sub__listid-input" type="hidden" name="listId" value="@email.listId" />
             </div>
-            <button type="submit" class="email-sub__submit-input button button--tertiary button--large">@submitText</button>
-            <small class="email-sub__small js-email-sub__small">@smallText</small>
+            <button type="submit" class="email-sub__submit-input button button--tertiary button--large">@email.submitText</button>
+            <small class="email-sub__small js-email-sub__small">@email.smallText</small>
         </div>
     </form>
 </div>
