--- a/static/src/stylesheets/module/commercial/gustyle/_gu-comlabel.scss
+++ b/static/src/stylesheets/module/commercial/gustyle/_gu-comlabel.scss
@@ -14,6 +14,7 @@
         border: 0;
         font-weight: bold;
         text-transform: uppercase;
+        color: colour(neutral-1);
 
         &.is-active:before {
             top: 32px;
