--- a/article/app/views/liveblog/liveBlogBody.scala.html
+++ b/article/app/views/liveblog/liveBlogBody.scala.html
@@ -77,13 +77,11 @@
                             @fragments.liveFilter(article.fields.isLive)
                             <div class="js-liveblog-body u-cf from-content-api js-blog-blocks @if(article.fields.isLive) {live-blog}" data-most-recent-block="@article.mostRecentBlock" data-test-id="live-blog-blocks"
                                 itemprop="@if(article.tags.isReview) {reviewBody} else {articleBody}">
-                                <div class="toast__space-reserver">
-                                    <div id="toast__tofix" class="toast__container">
-                                        <button class="toast__button toast__button--closed button button--large">
-                                            <span class="toast__text"></span>
-                                            @fragments.inlineSvg("refresh", "icon", List(""))
-                                        </button>
-                                    </div>
+                                <div id="toast__tofix" class="toast__container">
+                                    <button class="toast__button button button--large">
+                                        <span class="toast__text"></span>
+                                        @fragments.inlineSvg("refresh", "icon", List(""))
+                                    </button>
                                 </div>
                                 @views.html.liveblog.liveBlogBlocks(blocks.blocks, article, timezone)
                             </div>
