First draft of refined thrasher styling

--- a/static/src/javascripts/projects/common/views/membership-thrasher.html
+++ b/static/src/javascripts/projects/common/views/membership-thrasher.html
@@ -1,6 +1,6 @@
 <div class="membership-thrasher membership-test membership-test--<%=propositionName%> membership-test-bg-orange"
      data-link-name="membership 2.0 test" role="dialog" aria-label="thrasher membership 2.0">
-    <div class="membership-test__section membership-test__section--intro membership-test__section--thrasher">
+    <div class="membership-test__section membership-test__section--thrasher">
         <div class="membership-test__left">
             <div class="membership-test__header">
                 <div class="membership-test__logo">
