--- a/static/src/stylesheets/module/experiments/_membership-test.scss
+++ b/static/src/stylesheets/module/experiments/_membership-test.scss
@@ -8,6 +8,45 @@
         width: 100%;
         height: 100%;
     }
+
+    .membership-test__section--thrasher {
+        .membership-test__logo {
+            height: 24px;
+            svg {
+                width: 109px;
+            }
+            @include mq(tablet) {
+                height: 24px;
+                svg {
+                    width: 109px;
+                }
+            }
+        }
+        h1 {
+            font-size: 36px;
+            @include mq(phablet) {
+                font-size: 42px;
+            }
+        }
+        p {
+            @include fs-headline(2);
+
+            @include mq(phablet) {
+                font-size: 18px;
+                line-height: 22px;
+            }
+
+            @include mq(desktop) {
+                @include fs-headline(3);
+            }
+        }
+        .membership-test__section {
+            @include mq(leftCol) {
+                padding-left: $gs-gutter * 5;
+                padding-right: $gs-gutter * 5;
+            }
+        }
+    }
 }
 $c-mem-test-red: colour(live-default);
 $c-mem-test-orange: colour(media-default);
