--- a/commercial/app/views/debugger/allcreatives.scala.html
+++ b/commercial/app/views/debugger/allcreatives.scala.html
@@ -330,6 +330,32 @@
 
     <div class="fc-container__inner">
         <h2 class="test-page-head">
+            <a href="https://www.google.com/dfp/59666047#delivery/CreateCreativeTemplate/creativeTemplateId=10052487">
+                Merchandising: commercial component (hotels)
+            </a>
+        </h2>
+    </div>
+    <div class="fc-container fc-container--commercial">
+        <div class="js-merchandising-hotels ad-slot ad-slot--dfp ad-slot--merchandising ad-slot--commercial-component"></div>
+    </div>
+    <script>
+        loadCommercial(function () {
+            require(['common/modules/commercial/creatives/commercial-component'])
+                .then(function(
+                    CommercialComponent
+                ) {
+                    new CommercialComponent(document.querySelector('.js-merchandising-hotels'), {
+                        type: 'hotels',
+                        id: 'Australia',
+                        omnitureId: '[%OmnitureID%]',
+                        clickMacro: '%%CLICK_URL_ESC%%'
+                    }).create();
+                });
+        });
+    </script>
+
+    <div class="fc-container__inner">
+        <h2 class="test-page-head">
             <a href="https://www.google.com/dfp/59666047#delivery/CreateCreativeTemplate/creativeTemplateId=10030287">
                 Merchandising: commercial component (books)
             </a>
